[gd_scene load_steps=3 format=3 uid="uid://dgdxquwqf3pqw"]

[ext_resource type="Script" uid="uid://bucyexbiq4vtu" path="res://scripts/minigame_select.gd" id="1_76ert"]
[ext_resource type="AudioStream" uid="uid://o5aw6v10cwk1" path="res://sfx/3 - Revelation.ogg" id="2_ncchc"]

[node name="MinigameSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_76ert")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.137255, 0.52549, 0.262745, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Minigame Selection"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="GlobalScorePanel" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ScoreContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/GlobalScorePanel"]
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="Player1Score" type="Label" parent="MarginContainer/VBoxContainer/GlobalScorePanel/ScoreContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.2, 0.2, 1)
theme_override_font_sizes/font_size = 28
text = "Player 1: 0 pts"
horizontal_alignment = 1

[node name="Player2Score" type="Label" parent="MarginContainer/VBoxContainer/GlobalScorePanel/ScoreContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.2, 0.4, 1, 1)
theme_override_font_sizes/font_size = 28
text = "Player 2: 0 pts"
horizontal_alignment = 1

[node name="GameProgress" type="Label" parent="MarginContainer/VBoxContainer/GlobalScorePanel/ScoreContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 24
text = "Games: 0/4"
horizontal_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MinigameList" type="ItemList" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 24
auto_height = true

[node name="DescriptionPanel" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Description" type="Label" parent="MarginContainer/VBoxContainer/DescriptionPanel"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Minigame description appears here"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="SettingsPanel" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ButtonPanel" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="BackButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonPanel"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "Back to Menu"

[node name="RandomButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonPanel"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "Play Random"

[node name="PlayButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonPanel"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "Play Selected"

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_ncchc")
bus = &"Menu BGM"
